--- a/HalloDocWeb/Views/Shared/_AdminHeader.cshtml
+++ b/HalloDocWeb/Views/Shared/_AdminHeader.cshtml
@@ -144,6 +144,7 @@
                             <ul class="dropdown-menu" aria-labelledby="access1">
                                 <li><a class="navbar-dropdown-item dropdown-item" id="access" asp-action="AdminAccess" asp-controller="Admin">Account Access</a></li>
                                 <li><a class="navbar-dropdown-item dropdown-item" href="#">User Access</a></li>
+                                <li><a class="navbar-dropdown-item dropdown-item" href="#">Create Admin</a></li>
                             </ul>
                         </div>
                         <div class="dropdown navbar-dropdown ms-1">
