--- a/HalloDocWeb/Views/Admin/_Toclose.cshtml
+++ b/HalloDocWeb/Views/Admin/_Toclose.cshtml
@@ -30,7 +30,7 @@
             }
             @if (item.Requesttypeid == 3)
             {
-                str = "background-color : #FFD43B ;color:white;";
+                str = "background-color : #e6a00a ;color:white;";
             }
             @if (item.Requesttypeid == 4)
             {
