--- a/HalloDocWeb/Views/Home/patientdashboard.cshtml
+++ b/HalloDocWeb/Views/Home/patientdashboard.cshtml
@@ -98,7 +98,7 @@
                 <table class="table">
                     <thead>
                         <tr class="bg-light h-100">
-                            <th scope="col">Create Date<i class="fa fa-arrow-down" aria-hidden="true"></i></th>
+                            <th scope="col">Create Date</th>
                             <th scope="col">Status</th>
                             <th scope="col">Document</th>
                         </tr>
